--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,30 @@
-/* You can add global styles to this file, and also import other style files */
+
+
+@import url('https://fonts.googleapis.com/css?family=Raleway:300,700');
+
+body{
+    background-color: #EB7B27; // Cor de fundo do body
+    padding:3em; // Espaço em todos os cantos 3em significa 3 vezes o padding original
+    font-family: 'Raleway'; //Fonte
+    color:#fff; // Cor da fonte
+}
+
+ul{
+    list-style-type:none;
+    margin: 0 0 2em 0; 
+    padding :0;
+}
+
+ul li{
+    display:inline;
+    margin-right: 30px;
+}
+
+ul li a{
+  font-size: 1.5em;
+}
+
+a{
+    color: #fff;
+    text-decoration: none;
+}
